<resources>
    <string name="app_name">WeatherApp</string>

    <string name="cloudy">Cloudy</string>
    <string name="town_hint">Town</string>
    <string name="town_name_hint">Town name</string>
    <string name="wind_strong">Wind Strong</string>
    <string name="temperature_checkbox">Temperature</string>
    <string name="button_show_text">Show</string>
    <string name="humidity">Humidity</string>
    <string name="hum_value">96%</string>
    <string name="wind_value">3 m/s</string>
    <string name="temp_value">20 C</string>
    <string name="back_button">Back</string>

    <string name="main_settings">Settings</string>
    <string name="settings_label">Settings</string>
    <string name="theme_settings">Theme settings</string>
    <string name="light_theme">Light theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="town_not_chosen">Town not chosen</string>

    <string-array name="cities">
        <item>Санкт-Петербург</item>
        <item>Москва</item>
        <item>Самара</item>
        <item>Ростов</item>
        <item>Мурманск</item>
        <item>Курск</item>
        <item>Пушкин</item>
        <item>Балагое</item>
        <item>Владивосток</item>
        <item>Новгород</item>
        <item>Выборг</item>
        <item>Архангельск</item>
        <item>Волгоград</item>
        <item>Воронеж</item>
        <item>Гатчина</item>
        <item>Елец</item>
        <item>Калуга</item>
        <item>Киров</item>
        <item>Кириши</item>
        <item>Краснодар</item>
        <item>Крым</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
