<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/not_chosen"
        style="@style/town_not_chosen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/town_not_chosen"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/weather_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="3">

        <LinearLayout

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/town_layout_margin"
                android:weightSum="2">

                <TextView
                    style="@style/weather_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/town_hint" />

                <TextView
                    android:id="@+id/town_name_textView"
                    style="@style/weather_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout

                android:id="@+id/temperature_linerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/town_layout_margin"
                android:visibility="visible"
                android:weightSum="2">

                <TextView
                    style="@style/weather_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/temperature_checkbox" />

                <TextView
                    android:id="@+id/temperature_textView"
                    style="@style/weather_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/temp_value" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/wind_strong_linerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/town_layout_margin"
                android:visibility="visible"
                android:weightSum="2">

                <TextView
                    style="@style/weather_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/wind_strong" />

                <TextView
                    android:id="@+id/wind_textView"
                    style="@style/weather_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/wind_value" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/humidity_linerLayout"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/town_layout_margin"
                android:visibility="visible"
                android:weightSum="2">

                <TextView
                    style="@style/weather_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/humidity" />

                <TextView
                    android:id="@+id/humidity_textView"
                    style="@style/weather_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hum_value" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/image_margin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/cloudy" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/back_to_input_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/back_button" />
</LinearLayout>

